add more methods and number enums
